--- a/notebool um.ipynb
+++ b/notebool um.ipynb
@@ -4,53 +4,55 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7109826589595376\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#!/usr/bin/env python\n",
+    "# coding: utf-8\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from math import ceil\n",
+    "from random import choice\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import Normalizer\n",
     "\n",
-    "col_names = ['class', 'alcohol', 'ma', 'ash', 'aoa', 'mg',\n",
-    "             'tp', 'fl', 'np', 'pr', 'color', 'hue', 'od', 'proline']\n",
-    "dataset = pd.read_csv('./datasets/wine/wine.data', names=col_names)\n",
+    "wine = ('./datasets/wine/wine.data',\n",
+    "        ['class', 'alcohol', 'ma', 'ash', 'aoa', 'mg', 'tp', 'fl', 'np', 'pr', 'color', 'hue', 'od', 'proline'])\n",
+    "mammographic = ('./datasets/mammographic/mammographic_masses.data',\n",
+    "                ['birads', 'age', 'shape', 'margin', 'density', 'class'])\n",
+    "heart = ('./datasets/stalog_dataset/heart.dat',\n",
+    "                  ['age', 'sex', 'cp', 'rbp', 'chol', 'sug', 'rer', 'mhra', 'eia', 'op', 'slop', 'mvess', 'thal', 'class'])\n",
+    "breast_cancer = ('./datasets/breast_cancer_coimbra/dataR2.csv', ['age', 'bmi', 'gl', 'insul', 'homa', 'leptin', 'adi', 'resis', 'mcp', 'class'])\n",
     "\n",
+    "iris = ('./datasets/iris/iris.data', ['sl', 'sw', 'pl', 'pw', 'class'])\n",
     "\n",
+    "def read_dataset(path, column_names, replace_missing=False, sep=','):\n",
+    "    dataset = pd.read_csv(path, names=column_names, sep=sep)\n",
+    "    if replace_missing:\n",
+    "        dataset = dataset.replace('?', np.nan)\n",
+    "        imp_mean = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
+    "        dataset = imp_mean.fit_transform(dataset)\n",
+    "        dataset = pd.DataFrame(dataset, columns = column_names)\n",
+    "    return dataset\n",
     "\n",
-    "y = dataset['class']  # Klasy\n",
-    "x = dataset[col_names[1:]]  # Pozostałe cechy\n",
+    "def split_dataset(dataset, col_names, inital_learining_size, test_size):\n",
+    "    \n",
+    "    y = dataset['class']  # Klasy\n",
+    "    attrs = col_names[:]\n",
+    "    attrs.remove('class')\n",
+    "    x = dataset[attrs]  # Cechy\n",
+    "    \n",
+    "    # Dobrze wybrać zbiór treningowy\n",
+    "    # Jak wybierzemy źle, to model juz w stanie wyjść z lokalnego minimum\n",
+    "    x_initial_train, x_train, y_initial_train, y_train = train_test_split(x, y, test_size=1-inital_learining_size, stratify=y)\n",
     "\n",
-    "xTrain, xTest, yTrain, yTest = train_test_split(\n",
-    "    x, y, test_size=0.97)\n",
-    "\n",
-    "clf = SVC(kernel='linear', gamma='auto', probability=True, C=10000.0)\n",
-    "clf.fit(xTrain, yTrain)\n",
-    "\n",
-    "# To co nas interesuje do Active Learing to wsparcia wygenerowane przez klasyfikator\n",
-    "# Dokumentacja https://scikit-learn.org/stable/modules/svm.html\n",
-    "\n",
-    "# Ocena jakości\n",
-    "\n",
-    "predictions = clf.predict(xTest)\n",
-    "score = accuracy_score(yTest, predictions)\n",
-    "\n",
-    "print(score)\n",
-    "\n",
-    "# xTest = np.array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])\n",
-    "\n",
-    "\n",
-    "# 3. Margin selection — we select ‘k’ samples with the lowest difference between the two highest class probabilities, i.e., a higher figure will be given for samples whose model was very certain about a single class and lower to samples whose class probabilities are very similar.\n",
-    "\n",
-    "# In principle, active learning can be performed with any classification algorithm that is capable of providing uncer- tainty estimates with class predictions for new samples.\n"
+    "    # Utworzenie zbioru testowego i uczącego przed AL\n",
+    "    x_al_train, x_test, y_al_train, y_test = train_test_split(x_train, y_train, test_size=test_size)\n",
+    "    \n",
+    "    return (x_initial_train, x_al_train, x_test, y_initial_train, y_al_train, y_test)"
    ]
   },
   {
@@ -59,8 +61,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(clf.predict_proba(xTest))\n",
-    "df.index = xTest.index"
+    "# To co nas interesuje do Active Learing to wsparcia wygenerowane przez klasyfikator\n",
+    "# Dokumentacja https://scikit-learn.org/stable/modules/svm.html\n",
+    "\n",
+    "def active_learning_session(clf, budget, x_initial_train,\n",
+    "                            x_al_train, \n",
+    "                            x_test, \n",
+    "                            y_initial_train, \n",
+    "                            y_al_train, y_test, \n",
+    "                            random_sampling=False):\n",
+    "    used_budget = 0\n",
+    "    \n",
+    "    while used_budget <= budget:\n",
+    "        # make predcitons on training set\n",
+    "        probabilities = pd.DataFrame(clf.predict_proba(x_al_train))\n",
+    "        probabilities.index = x_al_train.index\n",
+    "\n",
+    "        # select most uncertain object\n",
+    "        probabilities['max_value'] = probabilities.max(axis=1)\n",
+    "        sorted_probab = probabilities.sort_values(by='max_value')\n",
+    "        \n",
+    "        if not random_sampling: \n",
+    "            selected_index = sorted_probab[:1].index.values\n",
+    "        else:\n",
+    "            selected_index = probabilities.sample(1).index\n",
+    "\n",
+    "        # add it to training set\n",
+    "        y_selected_sample = pd.DataFrame(y_al_train).loc[selected_index]\n",
+    "        x_selected_sample = pd.DataFrame(x_al_train).loc[selected_index]\n",
+    "\n",
+    "        x_initial_train = pd.concat([x_initial_train, x_selected_sample])\n",
+    "        y_initial_train = np.concatenate([y_initial_train, y_selected_sample['class']])\n",
+    "\n",
+    "        # drop index form AL set\n",
+    "        x_al_train = x_al_train.drop(selected_index)\n",
+    "        y_al_train = y_al_train.drop(selected_index)\n",
+    "\n",
+    "        # fit the model\n",
+    "        clf.fit(x_initial_train, y_initial_train)\n",
+    "        \n",
+    "        # increment budget\n",
+    "        used_budget += 1\n",
+    "        \n",
+    "    # Print score\n",
+    "    score = accuracy_score(y_test, clf.predict(x_test))\n",
+    "    \n",
+    "    return score"
    ]
   },
   {
@@ -69,7 +115,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['max_value'] = df.max(axis=1)"
+    "\n",
+    "def al_experiment(data, replace_missing=False, iterations=15):\n",
+    "    dataset = read_dataset(*data, replace_missing, sep=',')\n",
+    "    \n",
+    "    scores = []\n",
+    "    budget = 0.05\n",
+    "    \n",
+    "    result_dataframe = pd.DataFrame([], columns=['AL', 'Random', 'Batch'])\n",
+    "    \n",
+    "    for i in range(iterations):\n",
+    "        x_initial_train, x_al_train, x_test, y_initial_train, y_al_train, y_test = split_dataset(dataset, data[1], 0.05, 0.5)\n",
+    "    \n",
+    "        # Pierwszy model\n",
+    "        clf_al = SVC(kernel='linear', probability=True, C=50.0, decision_function_shape='ovo')\n",
+    "        clf_al.fit(x_initial_train, y_initial_train)\n",
+    "        \n",
+    "        clf_rand = SVC(kernel='linear', probability=True, C=50.0, decision_function_shape='ovo')\n",
+    "        clf_rand.fit(x_initial_train, y_initial_train)\n",
+    "        \n",
+    "        clf_all = SVC(kernel='linear', probability=True, C=50.0, decision_function_shape='ovo')\n",
+    "        clf_all.fit(x_al_train, y_al_train)\n",
+    "        \n",
+    "#         score = accuracy_score(y_test, clf.predict(x_test))\n",
+    "#         print(\"Init session: %f\" % score)\n",
+    "\n",
+    "        al = active_learning_session(clf_al,\n",
+    "                                budget*x_al_train.shape[0],\n",
+    "                                x_initial_train.copy(),\n",
+    "                                x_al_train.copy(),\n",
+    "                                x_test,\n",
+    "                                y_initial_train.copy(),\n",
+    "                                y_al_train.copy(),\n",
+    "                                y_test,\n",
+    "                                random_sampling=False)\n",
+    "    \n",
+    "        rnd = active_learning_session(clf_rand,\n",
+    "                                budget*x_al_train.shape[0],\n",
+    "                                x_initial_train.copy(),\n",
+    "                                x_al_train.copy(),\n",
+    "                                x_test,\n",
+    "                                y_initial_train.copy(),\n",
+    "                                y_al_train.copy(),\n",
+    "                                y_test,\n",
+    "                                random_sampling=True)\n",
+    "        \n",
+    "        score = accuracy_score(y_test, clf_all.predict(x_test))\n",
+    "        \n",
+    "        result_dataframe.loc[len(result_dataframe)] = [al, rnd, score]\n",
+    "    \n",
+    "    return result_dataframe   "
    ]
   },
   {
@@ -78,120 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorted_df = df.sort_values(by='max_value')"
+    "al_experiment(mammographic, replace_missing=True).to_csv('mammographic_05.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "indexes = sorted_df[:30].index.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yTrain_AL = pd.DataFrame(yTest).loc[indexes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xTrain_AL = pd.DataFrame(xTest).loc[indexes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xTest = xTest.drop(indexes)\n",
-    "yTest = yTest.drop(indexes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xTrain = pd.concat([xTrain, xTrain_AL])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yTrain = np.concatenate([yTrain, yTrain_AL['class']])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SVC(C=10000.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='linear',\n",
-       "  max_iter=-1, probability=True, random_state=None, shrinking=True,\n",
-       "  tol=0.001, verbose=False)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf.fit(xTrain, yTrain)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8811188811188811\n"
-     ]
-    }
-   ],
-   "source": [
-    "predictions = clf.predict(xTest)\n",
-    "score = accuracy_score(yTest, predictions)\n",
-    "\n",
-    "print(score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -210,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
