--- a/notebool um.ipynb
+++ b/notebool um.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,19 +18,25 @@
     "from random import choice\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import Normalizer\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.datasets import load_breast_cancer\n",
+    "\n",
     "\n",
     "wine = ('./datasets/wine/wine.data',\n",
-    "        ['class', 'alcohol', 'ma', 'ash', 'aoa', 'mg', 'tp', 'fl', 'np', 'pr', 'color', 'hue', 'od', 'proline'])\n",
+    "        ['class', 'alcohol', 'ma', 'ash', 'aoa', 'mg', 'tp', 'fl', 'np', 'pr', 'color', 'hue', 'od', 'proline'], ',')\n",
     "mammographic = ('./datasets/mammographic/mammographic_masses.data',\n",
-    "                ['birads', 'age', 'shape', 'margin', 'density', 'class'])\n",
+    "                ['birads', 'age', 'shape', 'margin', 'density', 'class'], ',')\n",
     "heart = ('./datasets/stalog_dataset/heart.dat',\n",
-    "                  ['age', 'sex', 'cp', 'rbp', 'chol', 'sug', 'rer', 'mhra', 'eia', 'op', 'slop', 'mvess', 'thal', 'class'])\n",
-    "breast_cancer = ('./datasets/breast_cancer_coimbra/dataR2.csv', ['age', 'bmi', 'gl', 'insul', 'homa', 'leptin', 'adi', 'resis', 'mcp', 'class'])\n",
+    "                  ['age', 'sex', 'cp', 'rbp', 'chol', 'sug', 'rer', 'mhra', 'eia', 'op', 'slop', 'mvess', 'thal', 'class'], ' ')\n",
+    "breast_cancer = ('./datasets/breast_cancer_coimbra/dataR2.csv', ['age', 'bmi', 'gl', 'insul', 'homa', 'leptin', 'adi', 'resis', 'mcp', 'class'], ',')\n",
     "\n",
-    "iris = ('./datasets/iris/iris.data', ['sl', 'sw', 'pl', 'pw', 'class'])\n",
+    "iris = ('./datasets/iris/iris.data', ['sl', 'sw', 'pl', 'pw', 'class'], ',')\n",
     "\n",
+    "dermatology =('./datasets/dermatology/dermatology.data', ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24', '25', '26', '27', '28', '29', '30', '31', '32','33', '34', 'class'], ',')\n",
+    "\n",
+    "ionosphere = ('./datasets/ionosphere/ionosphere.data', ['1','2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24', '25', '26', '27', '28', '29', '30','31', '32', '33', '34', 'class'], ',')\n",
     "def read_dataset(path, column_names, replace_missing=False, sep=','):\n",
-    "    dataset = pd.read_csv(path, names=column_names, sep=sep)\n",
+    "    dataset = pd.read_csv(path, names=column_names, sep=sep, index_col=False)\n",
     "    if replace_missing:\n",
     "        dataset = dataset.replace('?', np.nan)\n",
     "        imp_mean = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
@@ -57,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,40 +117,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def al_experiment(data, replace_missing=False, iterations=15):\n",
-    "    dataset = read_dataset(*data, replace_missing, sep=',')\n",
+    "def al_experiment(data, replace_missing=False, budget=0.03):\n",
+    "    dataset = read_dataset(*data[:-1], replace_missing, sep=data[2])\n",
     "    \n",
     "    scores = []\n",
-    "    budget = 0.05\n",
+    "#     budget = 0.20  #0.03 .05 .10. .15 .20\n",
     "    \n",
     "    result_dataframe = pd.DataFrame([], columns=['AL', 'Random', 'Batch'])\n",
+    "\n",
+    "    rskf = RepeatedStratifiedKFold(n_splits=2, n_repeats=5, random_state=3682164)\n",
     "    \n",
-    "    for i in range(iterations):\n",
-    "        x_initial_train, x_al_train, x_test, y_initial_train, y_al_train, y_test = split_dataset(dataset, data[1], 0.05, 0.5)\n",
+    "    attrs = data[1][:]\n",
+    "    attrs.remove('class')\n",
+    "    X = dataset[attrs]  # Cechy\n",
+    "    y = dataset['class']\n",
     "    \n",
-    "        # Pierwszy model\n",
-    "        clf_al = SVC(kernel='linear', probability=True, C=50.0, decision_function_shape='ovo')\n",
+    "#     d = load_breast_cancer()\n",
+    "#     X = pd.DataFrame(d.data)\n",
+    "#     y = pd.DataFrame(d.target.ravel(), columns=['class'])['class']\n",
+    "    \n",
+    "    for train_index, test_index in rskf.split(X, y):\n",
+    "        X_train = X.iloc[train_index]\n",
+    "        X_test = X.iloc[test_index]\n",
+    "        y_train = y.iloc[train_index]\n",
+    "        y_test = y.iloc[test_index]\n",
+    "        \n",
+    "        x_initial_train, x_al_train, y_initial_train, y_al_train =  train_test_split(X_train, y_train, test_size=0.95, stratify=y_train, random_state=5)\n",
+    "        \n",
+    "        #Pierwszy model\n",
+    "        clf_al = SVC(kernel='linear', probability=True, decision_function_shape='ovo')\n",
     "        clf_al.fit(x_initial_train, y_initial_train)\n",
     "        \n",
-    "        clf_rand = SVC(kernel='linear', probability=True, C=50.0, decision_function_shape='ovo')\n",
+    "        clf_rand = SVC(kernel='linear', probability=True, decision_function_shape='ovo')\n",
     "        clf_rand.fit(x_initial_train, y_initial_train)\n",
     "        \n",
-    "        clf_all = SVC(kernel='linear', probability=True, C=50.0, decision_function_shape='ovo')\n",
+    "        clf_all = SVC(kernel='linear', probability=True, decision_function_shape='ovo')\n",
     "        clf_all.fit(x_al_train, y_al_train)\n",
-    "        \n",
-    "#         score = accuracy_score(y_test, clf.predict(x_test))\n",
-    "#         print(\"Init session: %f\" % score)\n",
     "\n",
     "        al = active_learning_session(clf_al,\n",
     "                                budget*x_al_train.shape[0],\n",
     "                                x_initial_train.copy(),\n",
     "                                x_al_train.copy(),\n",
-    "                                x_test,\n",
+    "                                X_test,\n",
     "                                y_initial_train.copy(),\n",
     "                                y_al_train.copy(),\n",
     "                                y_test,\n",
@@ -154,13 +173,13 @@
     "                                budget*x_al_train.shape[0],\n",
     "                                x_initial_train.copy(),\n",
     "                                x_al_train.copy(),\n",
-    "                                x_test,\n",
+    "                                X_test,\n",
     "                                y_initial_train.copy(),\n",
     "                                y_al_train.copy(),\n",
     "                                y_test,\n",
     "                                random_sampling=True)\n",
     "        \n",
-    "        score = accuracy_score(y_test, clf_all.predict(x_test))\n",
+    "        score = accuracy_score(y_test, clf_all.predict(X_test))\n",
     "        \n",
     "        result_dataframe.loc[len(result_dataframe)] = [al, rnd, score]\n",
     "    \n",
@@ -169,12 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "al_experiment(mammographic, replace_missing=True).to_csv('mammographic_05.csv')"
+    "budgets = [0.05, 0.10, 0.15, 0.20]\n",
+    "\n",
+    "for budget in budgets:\n",
+    "    al_experiment(ionosphere, budget=budget, replace_missing=True).to_csv('ionosphere_%s.csv' % budget)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
