--- a/notebool um.ipynb
+++ b/notebool um.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,11 @@
     "dermatology =('./datasets/dermatology/dermatology.data', ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24', '25', '26', '27', '28', '29', '30', '31', '32','33', '34', 'class'], ',')\n",
     "\n",
     "ionosphere = ('./datasets/ionosphere/ionosphere.data', ['1','2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24', '25', '26', '27', '28', '29', '30','31', '32', '33', '34', 'class'], ',')\n",
+    "\n",
+    "balance = ('./datasets/balance/balance.data', ['class', '1', '2', '3', '4'], ',')\n",
+    "\n",
+    "cmc = ('./datasets/cmc/cmc.data', ['1', '2', '3', '4', '5', '6', '7', '8', '9', 'class'], ',')\n",
+    "\n",
     "def read_dataset(path, column_names, replace_missing=False, sep=','):\n",
     "    dataset = pd.read_csv(path, names=column_names, sep=sep, index_col=False)\n",
     "    if replace_missing:\n",
@@ -63,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "budgets = [0.05, 0.10, 0.15, 0.20]\n",
     "\n",
     "for budget in budgets:\n",
-    "    al_experiment(ionosphere, budget=budget, replace_missing=True).to_csv('ionosphere_%s.csv' % budget)"
+    "    al_experiment(cmc, budget=budget).to_csv('cmc_%s.csv' % budget)"
    ]
   },
   {
